--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 
 body {
-    background-color: rgb(24, 21, 21);
+    background: rgb(216, 215, 212);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -35,42 +35,100 @@ body {
     gap: 15px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 
     color: rgb(22, 21, 21);
 }
 
-.columnas:nth-child(2) {
-    display:block; 
-    
+
+
+
+.list {
+    margin-top: 30px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    *border: 1px solid black;
+    align-items: center;
+    justify-content: space-between;
+    background: rgb(16, 202, 78);
+    border-radius: 5px;
+    transition: .9s;
 }
 
-hr {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    display: none;
+li {
+   
+    width: 25%;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    color: white;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    transition: .9s;
+}
+
+li:nth-child(5) {
+    cursor: pointer;
+    color: rgb(172, 18, 18);
+}
+
+.bi-trash-fill:hover {
+    color: rgb(214, 31, 31);
+}
+.bi-pencil-fill:hover {
+    color: yellow;
 }
 
 h1 {
+    height: 5%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     letter-spacing: 3px;
     color: rgb(31, 32, 32);
-    font-size: 2.5em;
+    font-size: 2em;
     text-align: center;
 }
 
-h1:nth-child(2) {
-    margin-top: 20px;
+svg {
+    color: white;
+    margin-left: 5px;
 }
 
-span {
+
+
+
+
+
+.columnas div {
+    margin: 0 auto;
+    height: 30%;
+    width: 80%;
+}
+
+.caja-input {
+    width: 50%;
+    height: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
+label {
     height: 20px;
-    font-size: 1.1em;
+    font-size: 1em;
     font-weight: bold;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin-right: 10px;
 }
 
 input {
+    width: 50%;
     height: 30px;
     border: none;
     border-radius: 5px;
@@ -84,39 +142,11 @@ input::placeholder {
 
 
 
-table {
-    width: 100%;
-    text-align: center;
-    margin-top: 20px;
-   
-}
-
-th {
-    color: black;
-    background: rgb(238, 238, 238);
-    border-radius: 5px;
-    height: 40px;
-
-    font-size: 1em;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-}
-
-td {
-    color: white;
-    background: rgb(70, 138, 240);
-    border-radius: 5px;
-    margin-top: 5px;
-    height: 30px;
-
-    font-size: .9em;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-}
-
 
 
 .btn {
     width: 100px;
-    height: 30px;
+    height: 5%;
     border-radius: 5px;
 
     margin-top: 20px;
@@ -137,39 +167,38 @@ td {
     .caja {
 
         grid-template-columns: 100%;
-        grid-template-rows: 50% 50%;
+        grid-template-rows: 60% 40%;
     }
 
     .columnas:nth-child(1){
-    
             gap: 5px;
     }
 
-    
-    hr {
-        display: block;
+    .columnas div {
+        height: 35%;
     }
 
-
-    
-    span {
-        height: 20px;
-        font-size: 1em;
-    }
-    
-    th {
-        font-size: .8em;
-    }
-    
-    td {
-        font-size: .6em;
+    .btn {
+        height: 8%;
     }
 
-    h1 {
-        font-size: 1.5em;
-    }
     h1:nth-child(1) {
         margin-top: 20px;
+    }
+
+    label {
+        font-size: .8em;
+    }
+
+    li {
+   
+        width: 20%;
+        
+        font-size: .7em;
+    }
+
+    svg {
+        margin-left: 0;
     }
     
 }
