--- a/style.css
+++ b/style.css
@@ -1,215 +1,18 @@
 
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
 
 body {
-    background: rgb(216, 215, 212);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.caja {
-    
-    width: 95%;
-    height: 90vh;
-    
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
-
-    margin-top: 20px;
-    background: rgb(216, 215, 212);
-    border-radius: 10px;
-
-}
-
-
-.columnas:nth-child(1){
-    
-    display: flex;
-    gap: 15px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-
-    color: rgb(22, 21, 21);
-}
-
-
-
-
-.list {
-    margin-top: 30px;
-    width: 100%;
-    height: 40px;
-    display: flex;
-    flex-direction: row;
-    *border: 1px solid black;
-    align-items: center;
-    justify-content: space-between;
-    background: rgb(16, 202, 78);
-    border-radius: 5px;
-    transition: .9s;
-}
-
-
-li {
-   
-    width: 25%;
-    height: 20px;
-    text-align: center;
-    list-style: none;
-    color: white;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: .9em;
-    font-weight: bold;
-    transition: .9s;
-}
-
-
-li:nth-child(4) {
-    cursor: pointer;
-    color: rgb(172, 18, 18);
-}
-
-.bi-trash-fill:hover {
-    color: rgb(214, 31, 31);
-}
-.bi-pencil-fill:hover {
-    color: yellow;
-}
-
-h1 {
-    height: 5%;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    letter-spacing: 3px;
-    color: rgb(31, 32, 32);
-    font-size: 2em;
-    text-align: center;
+    margin: 0; padding: 0;
+    font-family: 'Poppins', sans-serif;
     text-transform: capitalize;
-}
-
-svg {
-    color: white;
-    margin-left: 5px;
+    font-size: .8em;
 }
 
 
-.columnas div {
-    margin: 0 auto;
-    height: 30%;
-    width: 80%;
-}
-
-.caja-input {
-    width: 50%;
-    height: 5%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 5px;
-}
-
-
-
-label {
-    height: 20px;
-    font-size: 1em;
-    font-weight: bold;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    margin-right: 10px;
-}
-
-input {
-    width: 50%;
-    height: 30px;
-    border: none;
+.container {
+    margin-top: 10px;
+    padding: 10px;
     border-radius: 5px;
-    outline-color: rgb(70, 138, 240);    
-}
-
-input::placeholder {
-    text-align: center;
-    font-size: 1em;
-}
-
-
-
-
-
-.btn {
-    width: 100px;
-    height: 5%;
-    border-radius: 5px;
-
-    margin-top: 20px;
-
-    color: white;
-
-    outline: none;
-    border: none;
-    background: rgb(19, 138, 19);
-}
-
-.btn:hover{
-    box-shadow: 3px 2px 4px 3px rgb(10, 85, 10);
-}
-
-
-@media (max-width: 900px) {
-    .caja {
-
-        grid-template-columns: 100%;
-        grid-template-rows: 60% 40%;
-    }
-
-    .columnas:nth-child(1){
-            gap: 5px;
-    }
-
-    .columnas div {
-        height: 35%;
-    }
-
-    .btn {
-        height: 8%;
-    }
-
-    h1:nth-child(1) {
-        margin-top: 20px;
-    }
-
-    label {
-        font-size: .8em;
-    }
-
-    li {
-   
-        width: 20%;
-        font-size: .8em;
-    }
-
-    
     
 }
 
-
-@media (max-width: 500px) {
-    li {
-        width: 20%;
-        font-size: .7em;
-    }
-}
-@media (max-width: 360px) {
-
-    li {
-        width: 20%;
-        font-size: .5em;
-    }
-
-}
